--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ rvm:
   - 2.1.2
   - 2.1.3
   - 2.2.0
+
+addons:
+  code_climate:
+    repo_token: 749cbdcad311874703e4581c7c3504d5e1cefe2d81ed61506018f546f458e219
